* Fixed transfer list view flicker on WinXP
* New connection settings, please check settings page
* Connection type freely settable, and default connection strings changed
* No longer fallbacks to passive mode on failed UPnP
* Janitorial cleanups (thanks garg)
* Removed some old favorite file format compatibility code
* Added country to search frame (thanks paka)
* Strftime fix (thanks garg)
* Directory listing type sort fix (thanks ullner)

-- 0.674 2005-04-10 --
*** WARNING ***
  This version fixes a security bug, upgrade unless you want to risk losing data
  anywhere on your drive, this error affects all clients from 0.307 to date (thanks cologic for finding it)
*** WARNING ***
* Added stats window to autoopen (thanks paka)
* Fixed context menu open for multi-screen setups (thanks trem)
* Changed country database to the original format so that users can update by themselves (thanks paka)
* Fixed some registry issues (thanks trem)
* Fixed localised number encodings (thanks trem)
* Updated sorting to use a more windows-like order (thanks trem)
* Fixed an issue with restore all (thanks krzysztof tyszecki)
* Added list view tooltips

-- 0.673 2005-03-22 --
* Added auto-prio by file size settings (thanks paka)
* Fixed yet another context menu fix (in case anyone wondered, it should now
  be possible to use the context menu key for all context menus)
* Fixed a search crash with search history set at 0
* Updated unicows W95 unicode support
* Updated to latest WTL
* Fixed directory listing total sizes (thanks trem)
* Fixed empty oplist issue

-- 0.672 2005-03-20 --
* Fixed an issue when loading pre-671 file lists
* Fixed the context menu fix

-- 0.671 2005-03-19 --
* Added possibility to set minislot size (thanks ullner)
* [bug 22] Added possibility for multiline away messages and user commands (thanks ullner)
* Added file type to queue frame (thanks ullner)
* Changed stats frame to use standard colors (thanks yoji)
* [bug 439] Fixed purge button (thanks ullner)