@@ -57,6 +57,7 @@ available?</a><br>
 <a href="settings_sharing.html">Sharing</a><br>
 <a href="settings_appearance.html">Appearance</a><br>
 <a href="settings_colors_and_sounds.html">Colors and sounds</a><br>
+<a href="settings_windows.html">Windows</a><br>
 <a href="settings_logs.html">Logs</a><br>
 <a href="settings_advanced.html">Advanced</a>
 <div style="margin-left: 40px;"> <a href="settings_expert.html">Experts only</a>
