@@ -23,16 +23,6 @@ redirect.</dd>
   <dt>Clear Search Box After Each Search</dt>
   <dd>After each search, your search terms will be cleared. The last 10
 terms will be accessible through the drop-down.</dd>
-  <dt>Open the Public Hubs Window at Startup</dt>
-  <dd>Opens the Public Hub window at startup, and automatically
-downloads the <a href="settings_downloads.html#hublist">configured
-public hub list</a>.</dd>
-  <dt>Open the Download Queue Window at Startup</dt>
-  <dd>Shows the Download Queue window at startup.</dd>
-  <dt>Open the Favorite Hubs Window at Startup</dt>
-  <dd>Shows the Favorite Hubs window at startup.</dd>
-  <dt>Open the Finished Downloads Window at Startup</dt>
-  <dd>Shows the Finished Downloads window at startup.</dd>
   <dt>Automatically Search for Alternative Download Locations</dt>
   <dd>Every few minutes, the client will search for files in your
 Download Queue to find more download locations (more users/sources). If
@@ -49,34 +39,6 @@ you're downloading.<span style="font-style: italic;">Enable if unsure.
 The drawbacks are that it might add slower sources, possibly increasing
 the time needed to complete a download, and that you'll download a lot
 of file lists.</span></dd>
-  <dt>Open Private Messages in Their Own Window</dt>
-  <dd>If you disable this option, a private message from a user appears
-as a status line in main chat instead of in a separate window. This
-could cause you to miss some messages if you don't check the chat
-regularly. <span style="font-style: italic;">You may not care much for
-private messages from other users. Ignoring them however, not only
-lessens the (user-friendly) Direct Connect experience, but is not
-always wise because failing to reply to a message from an Operator can
-get you kicked or, in the worst case, permanently banned from that hub.</span></dd>
-  <dt>Ignore Private Messages From Offline Users</dt>
-  <dd>Enable this if you wish to ignore private messages from users
-that are not online on the hub. These messages originate from hub bots
-and generally contain useful information, like hub specific rules or
-warnings.</dd>
-  <dt>Open Private Messages From Offline Users in Their Own Window</dt>
-  <dd>Enable this if you want messages from hub bots in their own
-window. When disabled they get sent as a status message in main chat
-instead which is less annoying yet still informative. <span
- style="font-style: italic;">This option only matters if you're not
-ignoring private messages from offline users (previous option).</span></dd>
-  <dt>Open New File List Windows in the Background</dt>
-  <dd>Keep this disabled if you want newly downloaded filelists to pop
-up in front of other windows. <span style="font-style: italic;">It can
-be very annoying to have a new window pop up when you're typing
-something.</span></dd>
-  <dt>Open New Private Message Windows in the Background</dt>
-  <dd>Keep this disabled if you want new private messages filelists to
-pop up in front of other windows.</dd>
   <dt>Keep Duplicate Files in Your File List</dt>
   <dd>Decides whether to remove duplicate files from your share or to
 list them but subtract their size from your total reported share size.
@@ -217,8 +179,6 @@ those files which have a TTH.</dd>
   <dt>Use CTRL for line history</dt>
   <dd>Press up arrow while holding down CTRL to scroll through line
 history. If not enabled, up arrow will be enough.</dd>
-  <dt><a name="new_window"></a>Open new window when using /join</dt>
-  <dd>When using /join &gt;ip&lt;, a new window with the hub will open.</dd>
   <dt>Search for files with TTH root only as standard</dt>
   <dd>Enables "Only results with TTH root" in the search window as
 standard. This option will cause search results that don't have a TTH
