@@ -1,0 +1,67 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>Appearance</title>
+  <meta content="text/html; charset=us-ascii" http-equiv="content-type">
+  <link href="office11.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<h1>Windows</h1>
+<h2>Auto-open at startup</h2>
+<dl style="margin-left: 40px;">
+  <dt>Public Hubs</dt>
+  <dd>Opens the Public Hub window at startup, and automatically
+downloads the <a href="settings_downloads.html#hublist">configured
+public hub list</a>.</dd>
+  <dt>Favorite Hubs</dt>
+  <dd>Opens the Favorite Hubs window at startup.</dd>
+  <dt>Finished Downloadsp</dt>
+  <dd>Opens the Finished Downloads window at startup.</dd>
+  <dt>Download Queue</dt>
+  <dd>Opens the Download Queue window at startup.</dd>
+  <dt>Finished Downloads</dt>
+  <dd>Opens the Finished Downloads window at startup.</dd>
+  <dt>Finished Uploads</dt>
+  <dd>Opens the Finished Uploads window at startup.</dd>
+  <dt>Search Spy</dt>
+  <dd>Opens the Search Spy window at startup.</dd>
+  <dt>Network Statistics</dt>
+  <dd>Opens the Network Statistics window at startup.</dd>
+  <dt>Notepad</dt>
+  <dd>Opens Notepad at startup.</dd>
+</dl>
+<h2>Windows options</h2>
+<dl style="margin-left: 40px;">
+<dt>Open Private Messages in Their Own Window</dt>
+  <dd>If you disable this option, a private message from a user appears
+as a status line in main chat instead of in a separate window. This
+could cause you to miss some messages if you don't check the chat
+regularly. <span style="font-style: italic;">You may not care much for
+private messages from other users. Ignoring them however, not only
+lessens the (user-friendly) Direct Connect experience, but is not
+always wise because failing to reply to a message from an Operator can
+get you kicked or, in the worst case, permanently banned from that hub.</span></dd>
+  <dt>Open Private Messages From Offline Users in Their Own Window</dt>
+  <dd>Enable this if you want messages from hub bots in their own
+window. When disabled they get sent as a status message in main chat
+instead which is less annoying yet still informative. <span
+ style="font-style: italic;">This option only matters if you're not
+ignoring private messages from offline users (previous option).</span></dd>
+  <dt>Open New File List Windows in the Background</dt>
+  <dd>Keep this disabled if you want newly downloaded filelists to pop
+up in front of other windows. <span style="font-style: italic;">It can
+be very annoying to have a new window pop up when you're typing
+something.</span></dd>
+  <dt>Open New Private Message Windows in the Background</dt>
+  <dd>Keep this disabled if you want new private messages filelists to
+pop up in front of other windows.</dd>
+  <dt><a name="new_window"></a>Open new window when using /join</dt>
+  <dd>When using /join &lt;ip&gt;, a new window with the hub will open.</dd>
+  <dt>Ignore Private Messages From Offline Users</dt>
+  <dd>Enable this if you wish to ignore private messages from users
+that are not online on the hub. These messages originate from hub bots
+and generally contain useful information, like hub specific rules or
+warnings.</dd>
+</dl>
+</body>
+</html>
